# winuidevkit

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: adding-a-language.md  architecture.md  bootstrap-protocol.md
examples/go-helloworld/: go.mod  main.go
examples/nodejs-helloworld/: package.json
examples/nodejs-helloworld/app/: MainWindow.xaml  main.ts
examples/python-helloworld/: pywinui.toml
examples/python-helloworld/app/: main.py
examples/rust-helloworld/: Cargo.toml
examples/rust-helloworld/src/: main.rs
examples/swift-helloworld/app/: main.swift
scripts/: build-release.ps1  install.ps1  winuidev.ps1
src/core/manifests/: AppxManifest.template.xml
src/core/sdk/: Install-WinAppSdk.ps1
src/core/xaml-templates/: MainWindow.xaml
src/go/: README.md
src/go/winrt/: winrt.go
src/languagepacks/go/: README.md  go.mod
src/languagepacks/go/bootstrap/: bootstrap.go
src/languagepacks/nodejs/: README.md  package.json
src/languagepacks/nodejs/src/: runtime.ts
src/languagepacks/nodejs/src/native/: binder.cpp  xaml_loader.cpp
src/languagepacks/python/: README.md  pyproject.toml
src/languagepacks/python/src/winuidevkit_python/: __init__.py
src/languagepacks/rust/: Cargo.toml  README.md
src/languagepacks/rust/src/: binder.rs  bootstrap.rs  lib.rs
src/languagepacks/swift/: README.md
src/languagepacks/swift/Sources/WinUICLI/: main.swift
src/languagepacks/swift/Sources/WinUIDevKit/: Bootstrap.swift  XamlLoader.swift
src/nodejs/: CMakeLists.txt  README.md  package.json  tsconfig.json
src/nodejs/src/: binder.ts  cli.ts  index.ts
src/nodejs/src/native/: addon.cpp  bootstrap.cpp  message_pump.cpp
src/python/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/python/.github/workflows/: release.yml
src/python/samples/HelloWorld/: README.md  pyproject.toml  pywinui.toml
src/python/samples/HelloWorld/app/: MainWindow.xaml  main.py
src/python/scripts/: build_and_deploy.ps1  quickstart.py
src/python/src/pywinui/: __init__.py  cli.py  packager.py  sdk_installer.py
src/python/src/pywinui/templates/default/: README.md  pyproject.toml  pywinui.toml
src/python/src/pywinui/templates/default/app/: MainWindow.xaml  main.py
src/python/src/pywinui/templates/default/designer/: XamlDesigner.csproj  XamlDesigner.sln
src/python/src/pywinui_runtime/: __init__.py  __main__.py  app.py  binder.py  bootstrap.py  xaml_loader.py
src/python/tests/: test_binder.py  test_cli.py
src/rust/: .gitignore  Cargo.toml  README.md  build.rs
src/rust/scripts/: download-metadata.ps1
src/rust/src/: binder.rs  bootstrap.rs  lib.rs  xaml_loader.rs
src/swift/: Package.swift  README.md
src/swift/Sources/WinUIDevKit/: Binder.swift
