[package]
name = "winuidevkit"
version = "0.1.0"
edition = "2021"
description = "WinUIDevKit Rust language pack – WinUI3 apps with Rust + XAML"
license = "MIT"
repository = "https://github.com/brflynn/WinUIDevKit"

[dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "implement",
]}
windows-core = "0.58"
clap = { version = "4", features = ["derive"] }
