[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winuidevkit-python"
version = "0.1.0"
description = "WinUIDevKit Python language pack – WinUI3 apps with Python + XAML"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "toml>=0.10",
    "pythonnet>=3.0.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
package = ["pyinstaller>=6.0"]

[project.scripts]
winui = "winuidevkit_python.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
winuidevkit_python = ["templates/**/*"]
